# grimoire-mcp

./: .gitignore  Cargo.toml  README.md
agent-os/standards/: index.yml
agent-os/standards/mcp/: error-semantics.md  handler-signature.md  request-structs.md  router-wiring.md
agent-os/standards/patterns/: fail-soft-load.md  file-format.md  naming-rules.md  validate-vs-sanitize.md
agent-os/standards/testing/: bug-fix-naming.md  paired-unit-property.md  spec-oracle.md  strategies.md
agent-os/standards/tui/: event-thread.md  filter-as-indices.md  init-safety.md  mode-enum.md
proptest-regressions/: patterns.txt
src/: lib.rs  main.rs  patterns.rs
