[package]
name = "grimoire-mcp"
version = "0.1.2"
edition = "2024"
description = "A Model Context Protocol server for managing software development patterns - your personal grimoire of reusable code knowledge"

[dependencies]
anyhow = "1.0.100"
rmcp = { version = "1.4.0", features = ["transport-io", "server", "macros", "schemars"] }
schemars = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
tui-big-text = "0.8.2"

[dev-dependencies]
proptest = "1"
tempfile = "3"
